@@ -25,6 +25,7 @@
  */
 package com.oracle.svm.core.jdk;
 
+import static com.oracle.svm.core.Uninterruptible.CALLED_FROM_UNINTERRUPTIBLE_CODE;
 import static com.oracle.svm.core.annotate.RecomputeFieldValue.Kind.Reset;
 import static com.oracle.svm.core.snippets.KnownIntrinsics.readHub;
 
@@ -32,7 +33,6 @@ import java.io.File;
 import java.io.InputStream;
 import java.io.PrintStream;
 import java.net.URL;
-import java.security.Permission;
 import java.util.Enumeration;
 import java.util.Map;
 import java.util.Properties;
@@ -41,12 +41,12 @@ import java.util.concurrent.ConcurrentMap;
 import java.util.function.BooleanSupplier;
 import java.util.stream.Stream;
 
-import com.oracle.svm.core.util.BasedOnJDKFile;
 import org.graalvm.nativeimage.Platform;
 import org.graalvm.nativeimage.Platforms;
 import org.graalvm.nativeimage.hosted.FieldValueTransformer;
 import org.graalvm.nativeimage.impl.InternalPlatform;
 
+import com.oracle.svm.core.AnalyzeJavaHomeAccessEnabled;
 import com.oracle.svm.core.BuildPhaseProvider;
 import com.oracle.svm.core.NeverInline;
 import com.oracle.svm.core.NeverInlineTrivial;
@@ -67,16 +67,18 @@ import com.oracle.svm.core.container.OperatingSystem;
 import com.oracle.svm.core.fieldvaluetransformer.FieldValueTransformerWithAvailability;
 import com.oracle.svm.core.hub.ClassForNameSupport;
 import com.oracle.svm.core.hub.DynamicHub;
+import com.oracle.svm.core.hub.registry.ClassRegistries;
 import com.oracle.svm.core.monitor.MonitorSupport;
 import com.oracle.svm.core.snippets.SubstrateForeignCallTarget;
 import com.oracle.svm.core.thread.JavaThreads;
 import com.oracle.svm.core.thread.VMOperation;
+import com.oracle.svm.core.util.BasedOnJDKFile;
 import com.oracle.svm.core.util.VMError;
 import com.oracle.svm.util.ReflectionUtil;
 
-import jdk.graal.compiler.replacements.nodes.BinaryMathIntrinsicNode;
+import jdk.graal.compiler.replacements.nodes.BinaryMathIntrinsicGenerationNode;
 import jdk.graal.compiler.replacements.nodes.BinaryMathIntrinsicNode.BinaryOperation;
-import jdk.graal.compiler.replacements.nodes.UnaryMathIntrinsicNode;
+import jdk.graal.compiler.replacements.nodes.UnaryMathIntrinsicGenerationNode;
 import jdk.graal.compiler.replacements.nodes.UnaryMathIntrinsicNode.UnaryOperation;
 import jdk.internal.loader.ClassLoaderValue;
 
@@ -155,6 +157,34 @@ final class Target_java_lang_Enum {
     public native int ordinal();
 }
 
+@TargetClass(java.lang.Byte.class)
+final class Target_java_lang_Byte {
+    @AnnotateOriginal
+    @Uninterruptible(reason = CALLED_FROM_UNINTERRUPTIBLE_CODE, mayBeInlined = true)
+    native long longValue();
+}
+
+@TargetClass(java.lang.Short.class)
+final class Target_java_lang_Short {
+    @AnnotateOriginal
+    @Uninterruptible(reason = CALLED_FROM_UNINTERRUPTIBLE_CODE, mayBeInlined = true)
+    native long longValue();
+}
+
+@TargetClass(java.lang.Character.class)
+final class Target_java_lang_Character {
+    @AnnotateOriginal
+    @Uninterruptible(reason = CALLED_FROM_UNINTERRUPTIBLE_CODE, mayBeInlined = true)
+    native char charValue();
+}
+
+@TargetClass(java.lang.Integer.class)
+final class Target_java_lang_Integer {
+    @AnnotateOriginal
+    @Uninterruptible(reason = CALLED_FROM_UNINTERRUPTIBLE_CODE, mayBeInlined = true)
+    native long longValue();
+}
+
 @TargetClass(java.lang.String.class)
 final class Target_java_lang_String {
 
@@ -216,7 +246,6 @@ final class Target_java_lang_StringUTF16 {
 final class Target_java_lang_Throwable {
 
     @Alias //
-    @TargetElement(onlyWith = JDKLatest.class) //
     @RecomputeFieldValue(kind = Kind.FromAlias, isFinal = true) //
     static boolean jfrTracing = false;
 
@@ -313,6 +342,22 @@ final class ThrowableStackTraceFieldValueTransformer implements FieldValueTransf
 @TargetClass(java.lang.StackTraceElement.class)
 @Platforms(InternalPlatform.NATIVE_ONLY.class)
 final class Target_java_lang_StackTraceElement {
+    @AnnotateOriginal
+    @Uninterruptible(reason = CALLED_FROM_UNINTERRUPTIBLE_CODE, mayBeInlined = true)
+    public native String getMethodName();
+
+    @AnnotateOriginal
+    @Uninterruptible(reason = CALLED_FROM_UNINTERRUPTIBLE_CODE, mayBeInlined = true)
+    public native String getClassName();
+
+    @AnnotateOriginal
+    @Uninterruptible(reason = CALLED_FROM_UNINTERRUPTIBLE_CODE, mayBeInlined = true)
+    public native String getFileName();
+
+    @AnnotateOriginal
+    @Uninterruptible(reason = CALLED_FROM_UNINTERRUPTIBLE_CODE, mayBeInlined = true)
+    public native int getLineNumber();
+
     /**
      * Constructs the {@link StackTraceElement} array from a backtrace.
      *
@@ -365,17 +410,17 @@ final class Target_java_lang_System {
     }
 
     @Substitute
-    private static void setIn(InputStream is) {
+    private static void setIn0(InputStream is) {
         in = is;
     }
 
     @Substitute
-    private static void setOut(PrintStream ps) {
+    private static void setOut0(PrintStream ps) {
         out = ps;
     }
 
     @Substitute
-    private static void setErr(PrintStream ps) {
+    private static void setErr0(PrintStream ps) {
         err = ps;
     }
 
@@ -405,7 +450,7 @@ final class Target_java_lang_System {
     }
 
     @Substitute
-    @NeverInlineTrivial("Used in 'java.home' access analysis: AnalyzeJavaHomeAccessPhase")
+    @NeverInlineTrivial(reason = "Used in 'java.home' access analysis: AnalyzeJavaHomeAccessPhase", onlyWith = AnalyzeJavaHomeAccessEnabled.class)
     private static String getProperty(String key) {
         checkKey(key);
         return SystemPropertiesSupport.singleton().getCurrentProperty(key);
@@ -418,7 +463,7 @@ final class Target_java_lang_System {
     }
 
     @Substitute
-    @NeverInlineTrivial("Used in 'java.home' access analysis: AnalyzeJavaHomeAccessPhase")
+    @NeverInlineTrivial(reason = "Used in 'java.home' access analysis: AnalyzeJavaHomeAccessPhase", onlyWith = AnalyzeJavaHomeAccessEnabled.class)
     private static String getProperty(String key, String def) {
         checkKey(key);
         return SystemPropertiesSupport.singleton().getCurrentProperty(key, def);
@@ -426,37 +471,6 @@ final class Target_java_lang_System {
 
     @Alias
     private static native void checkKey(String key);
-
-    /**
-     * Force System.Never in case it was set at build time via the `-Djava.security.manager=allow`
-     * passed to the image builder.
-     */
-    @Alias @RecomputeFieldValue(kind = Kind.FromAlias, isFinal = true) //
-    @TargetElement(onlyWith = JDK21OrEarlier.class) private static int allowSecurityManager = 1;
-
-    /**
-     * We do not support the {@link SecurityManager} so this method must throw a
-     * {@link SecurityException} when 'java.security.manager' is set to anything but
-     * <code>disallow</code>.
-     * 
-     * @see System#setSecurityManager(SecurityManager)
-     * @see SecurityManager
-     */
-    @Substitute
-    @SuppressWarnings({"removal", "javadoc"})
-    @TargetElement(onlyWith = JDK21OrEarlier.class)
-    private static void setSecurityManager(SecurityManager sm) {
-        if (sm != null) {
-            /* Read the property collected at isolate creation as that is what happens on the JVM */
-            String smp = SystemPropertiesSupport.singleton().getInitialProperty("java.security.manager");
-            if (smp != null && !smp.equals("disallow")) {
-                throw new SecurityException("Setting the SecurityManager is not supported by Native Image");
-            } else {
-                throw new UnsupportedOperationException(
-                                "The Security Manager is deprecated and will be removed in a future release");
-            }
-        }
-    }
 }
 
 final class NotAArch64 implements BooleanSupplier {
@@ -484,21 +498,21 @@ final class Target_java_lang_Math {
     @Uninterruptible(reason = "Must not contain a safepoint.")
     @SubstrateForeignCallTarget(fullyUninterruptible = true, stubCallingConvention = false)
     public static double sin(double a) {
-        return UnaryMathIntrinsicNode.compute(a, UnaryOperation.SIN);
+        return UnaryMathIntrinsicGenerationNode.compute(a, UnaryOperation.SIN);
     }
 
     @Substitute
     @Uninterruptible(reason = "Must not contain a safepoint.")
     @SubstrateForeignCallTarget(fullyUninterruptible = true, stubCallingConvention = false)
     public static double cos(double a) {
-        return UnaryMathIntrinsicNode.compute(a, UnaryOperation.COS);
+        return UnaryMathIntrinsicGenerationNode.compute(a, UnaryOperation.COS);
     }
 
     @Substitute
     @Uninterruptible(reason = "Must not contain a safepoint.")
     @SubstrateForeignCallTarget(fullyUninterruptible = true, stubCallingConvention = false)
     public static double tan(double a) {
-        return UnaryMathIntrinsicNode.compute(a, UnaryOperation.TAN);
+        return UnaryMathIntrinsicGenerationNode.compute(a, UnaryOperation.TAN);
     }
 
     @Substitute
@@ -506,35 +520,35 @@ final class Target_java_lang_Math {
     @SubstrateForeignCallTarget(fullyUninterruptible = true, stubCallingConvention = false)
     @TargetElement(onlyWith = IsAMD64.class)
     public static double tanh(double a) {
-        return UnaryMathIntrinsicNode.compute(a, UnaryOperation.TANH);
+        return UnaryMathIntrinsicGenerationNode.compute(a, UnaryOperation.TANH);
     }
 
     @Substitute
     @Uninterruptible(reason = "Must not contain a safepoint.")
     @SubstrateForeignCallTarget(fullyUninterruptible = true, stubCallingConvention = false)
     public static double log(double a) {
-        return UnaryMathIntrinsicNode.compute(a, UnaryOperation.LOG);
+        return UnaryMathIntrinsicGenerationNode.compute(a, UnaryOperation.LOG);
     }
 
     @Substitute
     @Uninterruptible(reason = "Must not contain a safepoint.")
     @SubstrateForeignCallTarget(fullyUninterruptible = true, stubCallingConvention = false)
     public static double log10(double a) {
-        return UnaryMathIntrinsicNode.compute(a, UnaryOperation.LOG10);
+        return UnaryMathIntrinsicGenerationNode.compute(a, UnaryOperation.LOG10);
     }
 
     @Substitute
     @Uninterruptible(reason = "Must not contain a safepoint.")
     @SubstrateForeignCallTarget(fullyUninterruptible = true, stubCallingConvention = false)
     public static double exp(double a) {
-        return UnaryMathIntrinsicNode.compute(a, UnaryOperation.EXP);
+        return UnaryMathIntrinsicGenerationNode.compute(a, UnaryOperation.EXP);
     }
 
     @Substitute
     @Uninterruptible(reason = "Must not contain a safepoint.")
     @SubstrateForeignCallTarget(fullyUninterruptible = true, stubCallingConvention = false)
     public static double pow(double a, double b) {
-        return BinaryMathIntrinsicNode.compute(a, b, BinaryOperation.POW);
+        return BinaryMathIntrinsicGenerationNode.compute(a, b, BinaryOperation.POW);
     }
 }
 
@@ -592,6 +606,7 @@ final class Target_java_lang_ClassValue {
 }
 
 class ClassValueInitializer implements FieldValueTransformerWithAvailability {
+    // JVMCI migration blocked by GR-72533: Migrate ClassValueSupport to JVMCI.
     @Override
     public Object transform(Object receiver, Object originalValue) {
         ClassValue<?> v = (ClassValue<?>) receiver;
@@ -659,6 +674,7 @@ final class Target_jdk_internal_loader_BootLoader {
     }
 
     @Substitute
+    @TargetElement(onlyWith = ClassForNameSupport.IgnoresClassLoader.class)
     public static Stream<Package> packages() {
         Target_jdk_internal_loader_BuiltinClassLoader bootClassLoader = Target_jdk_internal_loader_ClassLoaders.bootLoader();
         Target_java_lang_ClassLoader systemClassLoader = SubstrateUtil.cast(bootClassLoader, Target_java_lang_ClassLoader.class);
@@ -666,15 +682,27 @@ final class Target_jdk_internal_loader_BootLoader {
     }
 
     @Delete("only used by #packages()")
-    private static native String[] getSystemPackageNames();
+    @TargetElement(name = "getSystemPackageNames", onlyWith = ClassForNameSupport.IgnoresClassLoader.class)
+    private static native String[] getSystemPackageNamesDeleted();
 
     @Substitute
+    @TargetElement(onlyWith = ClassForNameSupport.RespectsClassLoader.class)
+    @BasedOnJDKFile("https://github.com/openjdk/jdk/blob/jdk-25+16/src/java.base/share/native/libjava/BootLoader.c#L37-L41")
+    @BasedOnJDKFile("https://github.com/openjdk/jdk/blob/jdk-25+16/src/hotspot/share/prims/jvm.cpp#L3003-L3007")
+    @BasedOnJDKFile("https://github.com/openjdk/jdk/blob/jdk-25+16/src/hotspot/share/classfile/classLoader.cpp#L907-L924")
+    private static String[] getSystemPackageNames() {
+        return ClassRegistries.getSystemPackageNames();
+    }
+
+    @Substitute
+    @TargetElement(onlyWith = ClassForNameSupport.IgnoresClassLoader.class)
     private static Class<?> loadClassOrNull(String name) {
         return ClassForNameSupport.forNameOrNull(name, null);
     }
 
     @SuppressWarnings("unused")
     @Substitute
+    @TargetElement(onlyWith = ClassForNameSupport.IgnoresClassLoader.class)
     private static Class<?> loadClass(Module module, String name) {
         /* The module system is not supported for now, therefore the module parameter is ignored. */
         return ClassForNameSupport.forNameOrNull(name, null);
@@ -708,15 +736,6 @@ final class Target_jdk_internal_loader_BootLoader {
     // Checkstyle: stop
     @Alias @RecomputeFieldValue(kind = RecomputeFieldValue.Kind.Custom, declClass = ClassLoaderValueMapFieldValueTransformer.class, isFinal = true)//
     static ConcurrentHashMap<?, ?> CLASS_LOADER_VALUE_MAP;
-    // Checkstyle: resume
-}
-
-@TargetClass(value = jdk.internal.logger.LoggerFinderLoader.class)
-final class Target_jdk_internal_logger_LoggerFinderLoader {
-    // Checkstyle: stop
-    @Alias @RecomputeFieldValue(kind = RecomputeFieldValue.Kind.Reset, isFinal = true)//
-    @TargetElement(onlyWith = JDK21OrEarlier.class)//
-    static Permission READ_PERMISSION;
     // Checkstyle: resume
 }
 
