@@ -24,16 +24,18 @@
  */
 package com.oracle.svm.driver;
 
+import static com.oracle.svm.core.util.EnvVariableUtils.EnvironmentVariable;
+
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.io.PrintStream;
 import java.lang.module.FindException;
 import java.lang.module.ModuleDescriptor;
 import java.lang.module.ModuleFinder;
 import java.lang.module.ModuleReference;
-import java.lang.reflect.Method;
 import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -59,6 +61,7 @@ import java.util.Optional;
 import java.util.Queue;
 import java.util.Set;
 import java.util.StringJoiner;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.BiConsumer;
 import java.util.function.BiFunction;
 import java.util.function.Consumer;
@@ -78,13 +81,14 @@ import org.graalvm.nativeimage.ProcessProperties;
 import com.oracle.graal.pointsto.api.PointstoOptions;
 import com.oracle.graal.pointsto.reports.ReportUtils;
 import com.oracle.svm.common.option.CommonOptions;
-import com.oracle.svm.core.FallbackExecutor;
-import com.oracle.svm.core.FallbackExecutor.Options;
+import com.oracle.svm.core.JavaVersionUtil;
 import com.oracle.svm.core.NativeImageClassLoaderOptions;
 import com.oracle.svm.core.OS;
+import com.oracle.svm.core.SharedConstants;
 import com.oracle.svm.core.SubstrateOptions;
 import com.oracle.svm.core.SubstrateUtil;
 import com.oracle.svm.core.VM;
+import com.oracle.svm.core.imagelayer.LayeredImageOptions;
 import com.oracle.svm.core.option.BundleMember;
 import com.oracle.svm.core.option.OptionOrigin;
 import com.oracle.svm.core.option.OptionUtils;
@@ -98,16 +102,15 @@ import com.oracle.svm.driver.launcher.ContainerSupport;
 import com.oracle.svm.driver.metainf.MetaInfFileType;
 import com.oracle.svm.driver.metainf.NativeImageMetaInfResourceProcessor;
 import com.oracle.svm.driver.metainf.NativeImageMetaInfWalker;
+import com.oracle.svm.hosted.CommonPoolUncaughtExceptionHandler;
 import com.oracle.svm.hosted.NativeImageGeneratorRunner;
 import com.oracle.svm.hosted.NativeImageSystemClassLoader;
 import com.oracle.svm.hosted.util.JDKArgsUtils;
 import com.oracle.svm.util.LogUtils;
 import com.oracle.svm.util.ModuleSupport;
-import com.oracle.svm.util.ReflectionUtil;
 import com.oracle.svm.util.StringUtil;
 
 import jdk.graal.compiler.options.OptionKey;
-import jdk.graal.compiler.serviceprovider.JavaVersionUtil;
 import jdk.internal.jimage.ImageReader;
 
 public class NativeImage {
@@ -115,10 +118,9 @@ public class NativeImage {
     private static final String DEFAULT_GENERATOR_CLASS_NAME = NativeImageGeneratorRunner.class.getName();
     private static final String DEFAULT_GENERATOR_MODULE_NAME = NativeImageGeneratorRunner.class.getModule().getName();
 
-    private static final String DEFAULT_GENERATOR_9PLUS_SUFFIX = "$JDK9Plus";
-    private static final String CUSTOM_SYSTEM_CLASS_LOADER = NativeImageSystemClassLoader.class.getCanonicalName();
-
-    static final boolean IS_AOT = Boolean.getBoolean("com.oracle.graalvm.isaot");
+    private static final String CUSTOM_SYSTEM_CLASS_LOADER = NativeImageSystemClassLoader.class.getName();
+    private static final String CUSTOM_COMMON_FORK_JOIN_POOL_THREAD_FACTORY = NativeImageSystemClassLoader.NativeImageForkJoinWorkerThreadFactory.class.getName();
+    private static final String CUSTOM_COMMON_FORK_JOIN_POOL_EXCEPTION_HANDLER = CommonPoolUncaughtExceptionHandler.class.getName();
 
     static final String platform = getPlatform();
 
@@ -131,6 +133,16 @@ public class NativeImage {
     static final String graalvmVendorVersion = VM.getVendorVersion();
     private static final String ALL_UNNAMED = "ALL-UNNAMED";
     static final String graalvmVersion = System.getProperty("org.graalvm.version", "dev");
+
+    /**
+     * The path to a temporary directory that is available during the process lifetime of the
+     * driver. The builder process can retrieve the directory path through the environment variable
+     * {@link SharedConstants#DRIVER_TEMP_DIR_ENV_VARIABLE}. The directory is created via
+     * {@link ArchiveSupport#createTempDir} and is therefore removed by the
+     * {@link Runtime#addShutdownHook shutdown hook}.
+     */
+    private final Path driverTempDir;
+    private static final String DRIVER_TEMP_DIR_PREFIX = "driverRoot-";
 
     private static Map<String, String[]> getCompilerFlags() {
         Map<String, String[]> result = new HashMap<>();
@@ -171,7 +183,9 @@ public class NativeImage {
         return null;
     }
 
-    private static final String usageText = getResource("/Usage.txt");
+    private static final String HELP_TEXT = NativeImage.getResource("/Help.txt");
+    private static final String HELP_EXTRA_TEXT = NativeImage.getResource("/HelpExtra.txt");
+    private static final String USAGE_TEXT = getResource("/Usage.txt");
 
     static class ArgumentQueue {
 
@@ -221,10 +235,6 @@ public class NativeImage {
         }
 
         abstract boolean consume(ArgumentQueue args);
-
-        void addFallbackBuildArgs(@SuppressWarnings("unused") List<String> buildArgs) {
-            /* Override to forward fallback relevant args */
-        }
     }
 
     final CmdLineOptionHandler cmdLineOptionHandler;
@@ -233,7 +243,6 @@ public class NativeImage {
 
     public static final String oH = "-H:";
     static final String oHEnabled = oH + "+";
-    static final String oHDisabled = oH + "-";
     static final String oR = "-R:";
 
     final String enablePrintFlags = CommonOptions.PrintFlags.getName();
@@ -256,14 +265,6 @@ public class NativeImage {
         return oHEnabled(option) + "@" + OptionOrigin.originDriver;
     }
 
-    private static String oHDisabled(OptionKey<Boolean> option) {
-        return oHDisabled + option.getName();
-    }
-
-    private static <T> String oR(OptionKey<T> option) {
-        return oR + option.getName() + "=";
-    }
-
     final String oHModule = oH(SubstrateOptions.Module);
     final String oHClass = oH(SubstrateOptions.Class);
     final String oHName = oH(SubstrateOptions.Name);
@@ -271,28 +272,23 @@ public class NativeImage {
     final String oHUseLibC = oH(SubstrateOptions.UseLibC);
     final String oHEnableStaticExecutable = oHEnabled(SubstrateOptions.StaticExecutable);
     final String oHEnableSharedLibraryFlagPrefix = oHEnabled + SubstrateOptions.SharedLibrary.getName();
-    final String oHEnableImageLayerFlagPrefix = oH + SubstrateOptions.LayerCreate.getName();
+    final String oHEnableImageLayerFlagPrefix = oH + LayeredImageOptions.LayerCreate.getName();
     final String oHColor = oH(SubstrateOptions.Color);
     final String oHEnableBuildOutputProgress = oHEnabledByDriver(SubstrateOptions.BuildOutputProgress);
     final String oHEnableBuildOutputLinks = oHEnabledByDriver(SubstrateOptions.BuildOutputLinks);
     final String oHCLibraryPath = oH(SubstrateOptions.CLibraryPath);
-    final String oHFallbackThreshold = oH(SubstrateOptions.FallbackThreshold);
-    final String oHFallbackExecutorJavaArg = oH(FallbackExecutor.Options.FallbackExecutorJavaArg);
-    final String oHNativeImageOptionsEnvVar = oH(SubstrateOptions.BuildOutputNativeImageOptionsEnvVarValue, OptionOrigin.originDriver);
-    final String oRRuntimeJavaArg = oR(Options.FallbackExecutorRuntimeJavaArg);
     final String oHTraceClassInitialization = oH(SubstrateOptions.TraceClassInitialization);
     final String oHTraceObjectInstantiation = oH(SubstrateOptions.TraceObjectInstantiation);
     final String oHTargetPlatform = oH(SubstrateOptions.TargetPlatform);
 
     final String oHInspectServerContentPath = oH(PointstoOptions.InspectServerContentPath);
     final String oHDeadlockWatchdogInterval = oH(SubstrateOptions.DeadlockWatchdogInterval);
-    final String oHLayerCreate = oH(SubstrateOptions.LayerCreate);
+    final String oHLayerCreate = oH(LayeredImageOptions.LayerCreate);
 
     final Map<String, String> imageBuilderEnvironment = new HashMap<>();
     private final ArrayList<String> imageBuilderArgs = new ArrayList<>();
     private final Set<String> imageBuilderUniqueLeftoverArgs = Collections.newSetFromMap(new IdentityHashMap<>());
     private final LinkedHashSet<Path> imageBuilderModulePath = new LinkedHashSet<>();
-    private final LinkedHashSet<Path> imageBuilderClasspath = new LinkedHashSet<>();
     private final LinkedHashSet<Path> imageProvidedJars = new LinkedHashSet<>();
     private final ArrayList<String> imageBuilderJavaArgs = new ArrayList<>();
     private final LinkedHashSet<Path> imageClasspath = new LinkedHashSet<>();
@@ -326,6 +322,10 @@ public class NativeImage {
     BundleSupport bundleSupport;
     private final ArchiveSupport archiveSupport;
 
+    /**
+     * When running the Native Image Driver on Espresso with SVM, the available VM flags differ from
+     * those on HotSpot. This accounts for that.
+     */
     public record HostFlags(
                     boolean useJVMCINativeLibrary,
                     boolean hasUseJVMCICompiler,
@@ -333,56 +333,66 @@ public class NativeImage {
                     boolean hasGCTimeRatio,
                     boolean hasExitOnOutOfMemoryError,
                     boolean hasMaximumHeapSizePercent,
-                    boolean hasUseParallelGC) {
+                    boolean hasUseParallelGC,
+                    boolean hasUseCompressedOops) {
+
+        public List<String> defaultMemoryFlags() {
+            List<String> flags = new ArrayList<>();
+            if (hasUseParallelGC) {
+                // native image generation is a throughput-oriented task
+                flags.add("-XX:+UseParallelGC");
+            }
+            if (hasGCTimeRatio) {
+                /*
+                 * Optimize for throughput by increasing the goal of the total time for garbage
+                 * collection from 1% to 10% (N=9). This also reduces peak RSS.
+                 */
+                flags.add("-XX:GCTimeRatio=9"); // 1/(1+N) time for GC
+            }
+            if (hasExitOnOutOfMemoryError) {
+                /*
+                 * Let the builder exit on first OutOfMemoryError to have shorter feedback loops.
+                 */
+                flags.add("-XX:+ExitOnOutOfMemoryError");
+            }
+            if (hasUseCompressedOops) {
+                /*
+                 * To print a warning if the max heap size is too large for compressed oops.
+                 */
+                flags.add("-XX:+UseCompressedOops");
+            }
+            return flags;
+        }
     }
 
     protected static class BuildConfiguration {
-        /*
-         * Reuse com.oracle.svm.util.ModuleSupport.isModulePathBuild() to ensure same interpretation
-         * of com.oracle.svm.util.ModuleSupport.ENV_VAR_USE_MODULE_SYSTEM environment variable use.
-         */
-        private static final Method isModulePathBuild = ReflectionUtil.lookupMethod(ModuleSupport.class, "isModulePathBuild");
-        private static final String JAVA_EXECUTABLE_OVERRIDE = System.getProperty("com.oracle.svm.driver.java.executable.override");
 
-        protected boolean modulePathBuild;
-        String imageBuilderModeEnforcer;
+        private static final String JAVA_EXECUTABLE_OVERRIDE = System.getProperty("com.oracle.svm.driver.java.executable.override");
 
         protected final Path workDir;
         protected final Path rootDir;
         protected final Path libJvmciDir;
+
+        /**
+         * Command line arguments from {@link NativeImage#main(String[])}.
+         */
         protected final List<String> args;
 
         private HostFlags hostFlags;
-
-        BuildConfiguration(BuildConfiguration original) {
-            modulePathBuild = original.modulePathBuild;
-            imageBuilderModeEnforcer = original.imageBuilderModeEnforcer;
-            workDir = original.workDir;
-            rootDir = original.rootDir;
-            libJvmciDir = original.libJvmciDir;
-            args = original.args;
-            hostFlags = original.hostFlags;
-        }
+        private Path driverTempDir;
 
         protected BuildConfiguration(List<String> args) {
             this(null, null, args);
         }
 
         BuildConfiguration(Path rootDir, Path workDir, List<String> args) {
-            try {
-                modulePathBuild = (boolean) isModulePathBuild.invoke(null);
-            } catch (ReflectiveOperationException | ClassCastException e) {
-                VMError.shouldNotReachHere(e);
-            }
-            imageBuilderModeEnforcer = null;
             this.args = Collections.unmodifiableList(args);
             this.workDir = workDir != null ? workDir : Paths.get(".").toAbsolutePath().normalize();
             if (rootDir != null) {
                 this.rootDir = rootDir;
             } else {
-                if (IS_AOT) {
+                if (ImageInfo.inImageRuntimeCode()) {
                     Path executablePath = Paths.get(ProcessProperties.getExecutableName());
-                    assert executablePath != null;
                     Path binDir = executablePath.getParent();
                     Path rootDirCandidate = binDir.getParent();
                     if (rootDirCandidate.endsWith(platform)) {
@@ -409,11 +419,7 @@ public class NativeImage {
          * @return The image generator main class entry point.
          */
         public List<String> getGeneratorMainClass() {
-            if (modulePathBuild) {
-                return Arrays.asList("--module", DEFAULT_GENERATOR_MODULE_NAME + "/" + DEFAULT_GENERATOR_CLASS_NAME);
-            } else {
-                return List.of(DEFAULT_GENERATOR_CLASS_NAME + DEFAULT_GENERATOR_9PLUS_SUFFIX);
-            }
+            return Arrays.asList("--module", DEFAULT_GENERATOR_MODULE_NAME + "/" + DEFAULT_GENERATOR_CLASS_NAME);
         }
 
         /**
@@ -458,24 +464,6 @@ public class NativeImage {
         }
 
         /**
-         * @return classpath for SubstrateVM image builder components
-         */
-        public List<Path> getBuilderClasspath() {
-            if (modulePathBuild) {
-                return Collections.emptyList();
-            }
-            List<Path> result = new ArrayList<>();
-            if (libJvmciDir != null) {
-                result.addAll(getJars(libJvmciDir, "graal-sdk", "graal", "enterprise-graal"));
-            }
-            result.addAll(getJars(rootDir.resolve(Paths.get("lib", "svm", "builder"))));
-            if (!modulePathBuild) {
-                result.addAll(createTruffleBuilderModulePath());
-            }
-            return result;
-        }
-
-        /**
          * @return base clibrary paths needed for general image building
          */
         public List<Path> getBuilderCLibrariesPaths() {
@@ -494,13 +482,6 @@ public class NativeImage {
         }
 
         /**
-         * @return base image classpath needed for every image (e.g. LIBRARY_SUPPORT)
-         */
-        public List<Path> getImageProvidedClasspath() {
-            return getImageProvidedJars();
-        }
-
-        /**
          * @return base image module-path needed for every image (e.g. LIBRARY_SUPPORT)
          */
         public List<Path> getImageProvidedModulePath() {
@@ -509,6 +490,12 @@ public class NativeImage {
 
         protected List<Path> getImageProvidedJars() {
             return getJars(rootDir.resolve(Paths.get("lib", "svm")));
+        }
+
+        protected void setDriverTempDir(Path tempDir) {
+            Objects.requireNonNull(tempDir);
+            VMError.guarantee(Files.isDirectory(tempDir));
+            this.driverTempDir = tempDir;
         }
 
         public HostFlags getHostFlags() {
@@ -526,6 +513,7 @@ public class NativeImage {
             boolean hasGCTimeRatio = false;
             boolean hasExitOnOutOfMemoryError = false;
             boolean hasUseParallelGC = false;
+            boolean hasUseCompressedOops = false;
 
             ProcessBuilder pb = new ProcessBuilder();
             sanitizeJVMEnvironment(pb.environment(), Map.of());
@@ -556,6 +544,8 @@ public class NativeImage {
                             hasMaximumHeapSizePercent = true;
                         } else if (line.contains(" UseParallelGC ")) {
                             hasUseParallelGC = true;
+                        } else if (line.contains(" UseCompressedOops ")) {
+                            hasUseCompressedOops = true;
                         }
                     }
                 }
@@ -575,15 +565,15 @@ public class NativeImage {
                             hasGCTimeRatio,
                             hasExitOnOutOfMemoryError,
                             hasMaximumHeapSizePercent,
-                            hasUseParallelGC);
+                            hasUseParallelGC,
+                            hasUseCompressedOops);
         }
 
         /**
-         * @return additional arguments for JVM that runs image builder
+         * Adds Java version specific arguments to {@code vmArgs} for the JVM that runs the image
+         * builder.
          */
-        public List<String> getBuilderJavaArgs() {
-            ArrayList<String> builderJavaArgs = new ArrayList<>();
-
+        public void addBuilderJavaArgs(List<String> vmArgs) {
             String javaVersion = String.valueOf(JavaVersionUtil.JAVA_SPEC);
             String[] flagsForVersion = graalCompilerFlags.get(javaVersion);
             if (flagsForVersion == null) {
@@ -598,49 +588,7 @@ public class NativeImage {
                                 System.getProperty("java.vm.name"),
                                 suffix));
             }
-
-            for (String line : flagsForVersion) {
-                if (!modulePathBuild && line.startsWith("--add-exports=")) {
-                    /*-
-                     * Turns e.g.
-                     * --add-exports=jdk.internal.vm.ci/jdk.vm.ci.code.stack=jdk.graal.compiler,org.graalvm.nativeimage.builder
-                     * into:
-                     * --add-exports=jdk.internal.vm.ci/jdk.vm.ci.code.stack=ALL-UNNAMED
-                     */
-                    builderJavaArgs.add(line.substring(0, line.lastIndexOf('=') + 1) + ALL_UNNAMED);
-                } else {
-                    builderJavaArgs.add(line);
-                }
-            }
-
-            if (getHostFlags().useJVMCINativeLibrary()) {
-                builderJavaArgs.add("-XX:+UseJVMCINativeLibrary");
-            } else if (getHostFlags().hasUseJVMCICompiler()) {
-                builderJavaArgs.add("-XX:-UseJVMCICompiler");
-
-                if (JavaVersionUtil.JAVA_SPEC == 21) {
-                    Runtime.Version version = Runtime.version();
-                    if (version.interim() == 0 && version.update() < 4) {
-                        /*
-                         * Native Image regularly crashes due to JDK-8328702. In JDK 21, the fix
-                         * only landed in 20.0.4 so in earlier JDK 21 versions, disable C2. This
-                         * workaround can be removed when GR-55515, GR-60648 or GR-60669 is
-                         * resolved.
-                         */
-                        builderJavaArgs.add("-XX:TieredStopAtLevel=1");
-
-                        /*
-                         * From the java man page section on ReservedCodeCacheSize: "the default
-                         * maximum code cache size is 240 MB; if you disable tiered compilation ...
-                         * then the default size is 48 MB". Experience shows that Native Image needs
-                         * the larger code cache, even when C2 is disabled.
-                         */
-                        builderJavaArgs.add("-XX:ReservedCodeCacheSize=240M");
-                    }
-                }
-            }
-
-            return builderJavaArgs;
+            vmArgs.addAll(Arrays.asList(flagsForVersion));
         }
 
         /**
@@ -656,10 +604,8 @@ public class NativeImage {
                 result.addAll(getJars(libJvmciDir, "enterprise-graal"));
                 result.addAll(getJars(libJvmciDir, "word", "collections", "nativeimage", "nativeimage-libgraal"));
             }
-            if (modulePathBuild) {
-                result.addAll(createTruffleBuilderModulePath());
-                result.addAll(getJars(rootDir.resolve(Paths.get("lib", "svm", "builder"))));
-            }
+            result.addAll(createTruffleBuilderModulePath());
+            result.addAll(getJars(rootDir.resolve(Paths.get("lib", "svm", "builder"))));
             return result;
         }
 
@@ -714,17 +660,12 @@ public class NativeImage {
         }
 
         /**
+         * Gets the command line arguments passed to the {@code native-image} command.
+         *
          * @return native-image (i.e. image build) arguments
          */
         public List<String> getBuildArgs() {
             return args;
-        }
-
-        /**
-         * @return true for fallback image building
-         */
-        public boolean buildFallbackImage() {
-            return false;
         }
     }
 
@@ -736,24 +677,22 @@ public class NativeImage {
             Map<String, String> properties = null;
             if (isNativeImagePropertiesFile) {
                 properties = ArchiveSupport.loadProperties(Files.newInputStream(resourcePath));
-                if (config.modulePathBuild) {
-                    String forceOnModulePath = properties.get("ForceOnModulePath");
-                    if (forceOnModulePath != null) {
-                        try {
-                            ModuleFinder finder = ModuleFinder.of(classpathEntry);
-                            ModuleReference ref = finder.find(forceOnModulePath).orElse(null);
-                            if (ref == null) {
-                                throw showError("Failed to process ForceOnModulePath attribute: Module descriptor for the module " + forceOnModulePath +
-                                                " was not found in class-path entry: " + classpathEntry + ".");
-                            }
-                        } catch (FindException e) {
+                String forceOnModulePath = properties.get("ForceOnModulePath");
+                if (forceOnModulePath != null) {
+                    try {
+                        ModuleFinder finder = ModuleFinder.of(classpathEntry);
+                        ModuleReference ref = finder.find(forceOnModulePath).orElse(null);
+                        if (ref == null) {
                             throw showError("Failed to process ForceOnModulePath attribute: Module descriptor for the module " + forceOnModulePath +
-                                            " could not be resolved with class-path entry: " + classpathEntry + ".", e);
+                                            " was not found in class-path entry: " + classpathEntry + ".");
                         }
-                        addImageModulePath(classpathEntry, true, false);
-                        addAddedModules(forceOnModulePath);
-                        ignoreClasspathEntry = true;
+                    } catch (FindException e) {
+                        throw showError("Failed to process ForceOnModulePath attribute: Module descriptor for the module " + forceOnModulePath +
+                                        " could not be resolved with class-path entry: " + classpathEntry + ".", e);
                     }
+                    addImageModulePath(classpathEntry, true, false);
+                    addAddedModules(forceOnModulePath);
+                    ignoreClasspathEntry = true;
                 }
             }
 
@@ -800,7 +739,7 @@ public class NativeImage {
 
         @Override
         public void showVerboseMessage(String message) {
-            NativeImage.this.showVerboseMessage(isVerbose(), message);
+            NativeImage.showVerboseMessage(isVerbose(), message);
         }
 
         @Override
@@ -810,92 +749,6 @@ public class NativeImage {
             return excludedConfigs.stream()
                             .filter(e -> e.jarPattern.matcher(matchPath.toString()).find())
                             .anyMatch(e -> e.resourcePattern.matcher(resourcePath.toString()).find());
-        }
-    }
-
-    private ArrayList<String> createFallbackBuildArgs() {
-        ArrayList<String> buildArgs = new ArrayList<>();
-        buildArgs.add(oHEnabled(SubstrateOptions.UnlockExperimentalVMOptions));
-        Collection<String> fallbackSystemProperties = customJavaArgs.stream()
-                        .filter(s -> s.startsWith("-D"))
-                        .collect(Collectors.toCollection(LinkedHashSet::new));
-        String fallbackExecutorSystemPropertyOption = oH(FallbackExecutor.Options.FallbackExecutorSystemProperty);
-        for (String property : fallbackSystemProperties) {
-            buildArgs.add(injectHostedOptionOrigin(fallbackExecutorSystemPropertyOption + property, OptionOrigin.originDriver));
-        }
-
-        List<String> runtimeJavaArgs = imageBuilderArgs.stream()
-                        .filter(s -> s.startsWith(oRRuntimeJavaArg))
-                        .toList();
-        buildArgs.addAll(runtimeJavaArgs);
-
-        List<String> fallbackExecutorJavaArgs = imageBuilderArgs.stream()
-                        .filter(s -> s.startsWith(oHFallbackExecutorJavaArg))
-                        .toList();
-        buildArgs.addAll(fallbackExecutorJavaArgs);
-
-        buildArgs.add(oHEnabled(SubstrateOptions.BuildOutputSilent));
-        buildArgs.add(oHEnabled(SubstrateOptions.ParseRuntimeOptions));
-        Path imagePathPath;
-        try {
-            imagePathPath = canonicalize(imagePath);
-        } catch (NativeImage.NativeImageError | InvalidPathException e) {
-            throw showError("The given " + oHPath + imagePath + " argument does not specify a valid path", e);
-        }
-        boolean[] isPortable = {true};
-        String classpathString = imageClasspath.stream()
-                        .map(path -> {
-                            try {
-                                return imagePathPath.relativize(path);
-                            } catch (IllegalArgumentException e) {
-                                isPortable[0] = false;
-                                return path;
-                            }
-                        })
-                        .map(Path::toString)
-                        .collect(Collectors.joining(File.pathSeparator));
-        if (!isPortable[0]) {
-            LogUtils.warning("The produced fallback image will not be portable, because not all classpath entries" +
-                            " could be relativized (e.g., they are on another drive).");
-        }
-        buildArgs.add(oHPath + imagePathPath.toString());
-        buildArgs.add(oH(FallbackExecutor.Options.FallbackExecutorClasspath) + classpathString);
-        buildArgs.add(oH(FallbackExecutor.Options.FallbackExecutorMainClass) + mainClass);
-        buildArgs.add(oHDisabled(SubstrateOptions.UnlockExperimentalVMOptions));
-
-        /*
-         * The fallback image on purpose captures the Java home directory used for image generation,
-         * see field FallbackExecutor.buildTimeJavaHome
-         */
-        buildArgs.add(oHDisabled(SubstrateOptions.DetectUserDirectoriesInImageHeap));
-
-        buildArgs.add(FallbackExecutor.class.getName());
-        buildArgs.add(imageName);
-
-        defaultOptionHandler.addFallbackBuildArgs(buildArgs);
-        for (OptionHandler<? extends NativeImage> handler : optionHandlers) {
-            handler.addFallbackBuildArgs(buildArgs);
-        }
-        return buildArgs;
-    }
-
-    private static final class FallbackBuildConfiguration extends BuildConfiguration {
-
-        private final List<String> fallbackBuildArgs;
-
-        private FallbackBuildConfiguration(NativeImage original) {
-            super(original.config);
-            fallbackBuildArgs = original.createFallbackBuildArgs();
-        }
-
-        @Override
-        public List<String> getBuildArgs() {
-            return fallbackBuildArgs;
-        }
-
-        @Override
-        public boolean buildFallbackImage() {
-            return true;
         }
     }
 
@@ -934,6 +787,9 @@ public class NativeImage {
         apiOptionHandler = new APIOptionHandler(this);
         registerOptionHandler(apiOptionHandler);
         registerOptionHandler(new MacroOptionHandler(this));
+
+        this.driverTempDir = config.driverTempDir != null ? config.driverTempDir : archiveSupport.createTempDir(DRIVER_TEMP_DIR_PREFIX, new AtomicBoolean(true));
+        config.setDriverTempDir(this.driverTempDir);
     }
 
     void addMacroOptionRoot(Path configDir) {
@@ -946,29 +802,35 @@ public class NativeImage {
         optionHandlers.add(handler);
     }
 
+    private List<String> defaultNativeImageArgs = null;
+
     private List<String> getDefaultNativeImageArgs() {
-        List<String> defaultNativeImageArgs = new ArrayList<>();
-        String propertyOptions = userConfigProperties.get("NativeImageArgs");
-        if (propertyOptions != null) {
-            Collections.addAll(defaultNativeImageArgs, propertyOptions.split(" +"));
-        }
-        final String envVarName = SubstrateOptions.NATIVE_IMAGE_OPTIONS_ENV_VAR;
-        String nativeImageOptionsValue = System.getenv(envVarName);
-        if (nativeImageOptionsValue != null) {
-            defaultNativeImageArgs.addAll(JDKArgsUtils.parseArgsFromEnvVar(nativeImageOptionsValue, envVarName, msg -> showError(msg)));
-        }
-        if (!defaultNativeImageArgs.isEmpty()) {
-            String buildApplyOptionName = BundleSupport.BundleOptionVariants.apply.optionName();
-            if (config.getBuildArgs().stream().noneMatch(arg -> arg.startsWith(buildApplyOptionName + "="))) {
-                if (nativeImageOptionsValue != null) {
-                    addPlainImageBuilderArg(oHNativeImageOptionsEnvVar + nativeImageOptionsValue);
+        if (defaultNativeImageArgs == null) {
+            List<String> args = new ArrayList<>();
+            String propertyOptions = userConfigProperties.get("NativeImageArgs");
+            if (propertyOptions != null) {
+                Collections.addAll(args, propertyOptions.split(" +"));
+            }
+            final String envVarName = SubstrateOptions.NATIVE_IMAGE_OPTIONS_ENV_VAR;
+            String nativeImageOptionsValue = System.getenv(envVarName);
+            if (nativeImageOptionsValue != null) {
+                args.addAll(JDKArgsUtils.parseArgsFromEnvVar(nativeImageOptionsValue, envVarName, msg -> showError(msg)));
+            }
+            if (!args.isEmpty()) {
+                String buildApplyOptionName = BundleSupport.BundleOptionVariants.apply.optionName();
+                if (config.getBuildArgs().stream().noneMatch(arg -> arg.startsWith(buildApplyOptionName + "="))) {
+                    if (nativeImageOptionsValue != null) {
+                        LogUtils.info("Picked up " + envVarName, nativeImageOptionsValue);
+                    }
+                    defaultNativeImageArgs = List.copyOf(args);
+                } else {
+                    LogUtils.warning("Option '" + buildApplyOptionName + "' in use. Ignoring environment variables " + envVarName + " and " + NativeImage.CONFIG_FILE_ENV_VAR_KEY + ".");
                 }
-                return List.copyOf(defaultNativeImageArgs);
             } else {
-                LogUtils.warning("Option '" + buildApplyOptionName + "' in use. Ignoring environment variables " + envVarName + " and " + NativeImage.CONFIG_FILE_ENV_VAR_KEY + ".");
+                defaultNativeImageArgs = List.of();
             }
         }
-        return List.of();
+        return defaultNativeImageArgs;
     }
 
     static void ensureDirectoryExists(Path dir) {
@@ -987,7 +849,7 @@ public class NativeImage {
 
     private void prepareImageBuildArgs() {
         addImageBuilderJavaArgs("-Xss10m");
-        addImageBuilderJavaArgs(MemoryUtil.determineMemoryFlags(config.getHostFlags()));
+        addImageBuilderJavaArgs(config.getHostFlags().defaultMemoryFlags());
 
         /* Prevent JVM that runs the image builder to steal focus. */
         addImageBuilderJavaArgs("-Djava.awt.headless=true");
@@ -998,6 +860,8 @@ public class NativeImage {
         addImageBuilderJavaArgs("-Dorg.graalvm.version=" + graalvmVersion);
         addImageBuilderJavaArgs("-Dcom.oracle.graalvm.isaot=true");
         addImageBuilderJavaArgs("-Djava.system.class.loader=" + CUSTOM_SYSTEM_CLASS_LOADER);
+        addImageBuilderJavaArgs("-Djava.util.concurrent.ForkJoinPool.common.exceptionHandler=" + CUSTOM_COMMON_FORK_JOIN_POOL_EXCEPTION_HANDLER);
+        addImageBuilderJavaArgs("-Djava.util.concurrent.ForkJoinPool.common.threadFactory=" + CUSTOM_COMMON_FORK_JOIN_POOL_THREAD_FACTORY);
 
         addImageBuilderJavaArgs("-D" + ImageInfo.PROPERTY_IMAGE_CODE_KEY + "=" + ImageInfo.PROPERTY_IMAGE_CODE_VALUE_BUILDTIME);
 
@@ -1011,11 +875,6 @@ public class NativeImage {
     }
 
     private void completeOptionArgs() {
-        LinkedHashSet<EnabledOption> enabledOptions = optionRegistry.getEnabledOptions();
-        /* Any use of MacroOptions opts-out of auto-fallback and activates --no-fallback */
-        if (!enabledOptions.isEmpty()) {
-            addPlainImageBuilderArg(oHFallbackThreshold + SubstrateOptions.NoFallback, OptionOrigin.originDriver);
-        }
         consolidateListArgs(imageBuilderJavaArgs, "-Dpolyglot.engine.PreinitializeContexts=", ",", Function.identity()); // legacy
         consolidateListArgs(imageBuilderJavaArgs, "-Dpolyglot.image-build-time.PreinitializeContexts=", ",", Function.identity());
     }
@@ -1181,8 +1040,6 @@ public class NativeImage {
         processNativeImageArgs();
         apiOptionHandler.validateExperimentalOptions();
 
-        config.getBuilderClasspath().forEach(this::addImageBuilderClasspath);
-
         if (config.getBuilderInspectServerPath() != null) {
             addPlainImageBuilderArg(oHInspectServerContentPath + config.getBuilderInspectServerPath());
         }
@@ -1262,7 +1119,19 @@ public class NativeImage {
             }
         }
 
-        addImageBuilderJavaArgs(customJavaArgs.toArray(new String[0]));
+        addImageBuilderJavaArgs(customJavaArgs);
+
+        List<String> userMemoryFlags = new ArrayList<>();
+        for (String arg : imageBuilderJavaArgs) {
+            if (MemoryUtil.isMemoryFlag(arg)) {
+                userMemoryFlags.add(arg);
+            }
+        }
+        HostFlags hostFlags = config.getHostFlags();
+        List<String> memoryFlagsToAdd = MemoryUtil.heuristicMemoryFlags(hostFlags, userMemoryFlags);
+        for (String memoryFlag : memoryFlagsToAdd.reversed()) {
+            imageBuilderJavaArgs.addFirst(memoryFlag);
+        }
 
         /* Perform option consolidation of imageBuilderArgs */
 
@@ -1302,8 +1171,7 @@ public class NativeImage {
                 boolean hasMainClass = mainClass != null && !mainClass.isEmpty();
                 if (extraImageArgs.isEmpty()) {
                     if (buildExecutable && !hasMainClassModule && !hasMainClass && !listModules) {
-                        String moduleMsg = config.modulePathBuild ? " (or <module>/<mainclass>)" : "";
-                        showError("Please specify class" + moduleMsg + " containing the main entry point method. (see --help)");
+                        showError("Please specify class (or <module>/<mainclass>) containing the main entry point method. (see --help)");
                     }
                 } else if (!moduleOptionMode) {
                     /* extraImageArgs main-class overrules previous main-class specification */
@@ -1419,43 +1287,91 @@ public class NativeImage {
         LinkedHashSet<Path> finalImageClasspath = new LinkedHashSet<>(imageClasspath);
 
         LinkedHashSet<Path> finalImageProvidedJars = new LinkedHashSet<>(this.imageProvidedJars);
-        if (config.modulePathBuild) {
+        if (!finalImageModulePath.isEmpty() || !finalImageClasspath.isEmpty()) {
             finalImageProvidedJars.addAll(config.getImageProvidedModulePath());
-            finalImageModulePath.addAll(finalImageProvidedJars);
-        } else {
-            finalImageProvidedJars.addAll(config.getImageProvidedClasspath());
-            finalImageClasspath.addAll(finalImageProvidedJars);
         }
+        finalImageModulePath.addAll(finalImageProvidedJars);
         finalImageProvidedJars.forEach(this::processClasspathNativeImageMetaInf);
-
-        if (!config.buildFallbackImage()) {
-            Optional<ArgumentEntry> fallbackThresholdEntry = getHostedOptionArgument(imageBuilderArgs, oHFallbackThreshold);
-            if (fallbackThresholdEntry.isPresent() && fallbackThresholdEntry.get().value.equals("" + SubstrateOptions.ForceFallback)) {
-                /* Bypass regular build and proceed with fallback image building */
-                return ExitStatus.FALLBACK_IMAGE.getValue();
-            }
-        }
+        imageBuilderJavaArgs.add("-D" + SharedConstants.IMAGE_PROVIDED_JARS_ENV_VARIABLE + "=" + String.join(File.pathSeparator, finalImageProvidedJars.stream().map(Path::toString).toList()));
 
         if (!limitModules.isEmpty()) {
             imageBuilderJavaArgs.add("-D" + ModuleSupport.PROPERTY_IMAGE_EXPLICITLY_LIMITED_MODULES + "=" + String.join(",", limitModules));
         }
-        if (config.modulePathBuild && !finalImageClasspath.isEmpty()) {
+        if (!finalImageClasspath.isEmpty()) {
             imageBuilderJavaArgs.add(DefaultOptionHandler.addModulesOption + "=ALL-DEFAULT");
         }
         // allow native access for all modules on the image builder module path
         var enableNativeAccessModules = getModulesFromPath(imageBuilderModulePath).keySet();
         imageBuilderJavaArgs.add("--enable-native-access=" + String.join(",", enableNativeAccessModules));
+        // pass the number of warnings to the builder process
+        imageBuilderArgs.add(oH(SubstrateOptions.DriverWarningsCount) + LogUtils.getWarningsCount());
 
         boolean useColorfulOutput = configureBuildOutput();
 
-        List<String> finalImageBuilderJavaArgs = Stream.concat(config.getBuilderJavaArgs().stream(), imageBuilderJavaArgs.stream()).collect(Collectors.toList());
+        List<String> args = new ArrayList<>();
+        config.addBuilderJavaArgs(args);
+        disableJarGraalJIT(args, hostFlags, imageBuilderJavaArgs);
+        args.addAll(imageBuilderJavaArgs);
+        List<String> finalImageBuilderJavaArgs = Collections.unmodifiableList(args);
+
         try {
-            return buildImage(finalImageBuilderJavaArgs, imageBuilderClasspath, imageBuilderModulePath, imageBuilderArgs, finalImageClasspath, finalImageModulePath);
+            return buildImage(finalImageBuilderJavaArgs, imageBuilderModulePath, imageBuilderArgs, finalImageClasspath, finalImageModulePath);
         } finally {
             if (useColorfulOutput) {
                 performANSIReset();
             }
         }
+    }
+
+    /**
+     * Adds HotSpot VM arguments to {@code vmArgs} that prevents using jargraal as the JIT when
+     * running Native Image. This is an untested (and uninteresting) configuration that's better to
+     * forbid than try to support.
+     *
+     * @param suffixVmArgs VM arguments that will be appended to the Native Image JVM launcher after
+     *            {@code vmArgs}
+     */
+    private static void disableJarGraalJIT(List<String> vmArgs, HostFlags hostFlags, List<String> suffixVmArgs) {
+        Boolean useJVMCINativeLibrary = getXXBoolArg(suffixVmArgs, "UseJVMCINativeLibrary");
+        if (useJVMCINativeLibrary == null) {
+            if (hostFlags.useJVMCINativeLibrary()) {
+                vmArgs.add("-XX:+UseJVMCINativeLibrary");
+                useJVMCINativeLibrary = true;
+            } else {
+                useJVMCINativeLibrary = false;
+            }
+        }
+        if (!useJVMCINativeLibrary) {
+            if (hostFlags.hasUseJVMCICompiler()) {
+                Boolean useJVMCICompiler = getXXBoolArg(suffixVmArgs, "UseJVMCICompiler");
+                if (useJVMCICompiler == Boolean.TRUE) {
+                    throw NativeImage.showError("Using jargraal as JIT (i.e. -XX:+UseJVMCICompiler -XX:-UseJVMCINativeLibrary) is not supported when Native Image is running on HotSpot.");
+                }
+                if (useJVMCICompiler == null) {
+                    vmArgs.add("-XX:-UseJVMCICompiler");
+                }
+            }
+        }
+    }
+
+    /**
+     * Gets the last value specified in {@code args} of the {@code -XX} HotSpot flag whose name is
+     * {@code name}.
+     *
+     * @return the last value specified or null if the named flag is not present in {@code args}
+     */
+    private static Boolean getXXBoolArg(List<String> args, String name) {
+        String positive = "-XX:+" + name;
+        String negative = "-XX:-" + name;
+        for (String arg : args.reversed()) {
+            if (arg.equals(positive)) {
+                return true;
+            }
+            if (arg.equals(negative)) {
+                return false;
+            }
+        }
+        return null;
     }
 
     private static String validateImageName(String imageName) {
@@ -1517,7 +1433,7 @@ public class NativeImage {
     }
 
     private boolean shouldAddCWDToCP() {
-        if (config.buildFallbackImage() || printFlagsOptionQuery != null || printFlagsWithExtraHelpOptionQuery != null) {
+        if (printFlagsOptionQuery != null || printFlagsWithExtraHelpOptionQuery != null) {
             return false;
         }
 
@@ -1623,7 +1539,7 @@ public class NativeImage {
 
     protected Path createVMInvocationArgumentFile(List<String> arguments) {
         try {
-            Path argsFile = Files.createTempFile("vminvocation", ".args");
+            Path argsFile = createFileInTempDir("vminvocation.args");
             StringJoiner joiner = new StringJoiner("\n");
             for (String arg : arguments) {
                 // Options in @argfile need to be properly quoted as
@@ -1641,7 +1557,6 @@ public class NativeImage {
             }
             String joinedOptions = joiner.toString();
             Files.write(argsFile, joinedOptions.getBytes());
-            argsFile.toFile().deleteOnExit();
             return argsFile;
         } catch (IOException e) {
             throw showError(e.getMessage());
@@ -1650,34 +1565,24 @@ public class NativeImage {
 
     protected Path createImageBuilderArgumentFile(List<String> imageBuilderArguments) {
         try {
-            Path argsFile = Files.createTempFile("native-image", ".args");
+            Path argsFile = createFileInTempDir("native-image.args");
             String joinedOptions = String.join("\0", imageBuilderArguments);
             Files.write(argsFile, joinedOptions.getBytes());
-            argsFile.toFile().deleteOnExit();
             return argsFile;
         } catch (IOException e) {
             throw showError(e.getMessage());
         }
     }
 
-    protected int buildImage(List<String> javaArgs, LinkedHashSet<Path> cp, LinkedHashSet<Path> mp, ArrayList<String> imageArgs, LinkedHashSet<Path> imagecp,
+    protected int buildImage(List<String> javaArgs, LinkedHashSet<Path> mp, ArrayList<String> imageArgs, LinkedHashSet<Path> imagecp,
                     LinkedHashSet<Path> imagemp) {
         List<String> arguments = new ArrayList<>(javaArgs);
 
-        if (!cp.isEmpty()) {
-            arguments.addAll(Arrays.asList("-cp", cp.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator))));
-        }
+        assert !mp.isEmpty() : "Empty builder module-path";
+        List<String> strings = Arrays.asList("--module-path", mp.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator)));
+        arguments.addAll(strings);
 
-        if (!mp.isEmpty()) {
-            List<String> strings = Arrays.asList("--module-path", mp.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator)));
-            arguments.addAll(strings);
-        }
-
-        if (useBundle()) {
-            LogUtils.warning("Native Image Bundles are an experimental feature.");
-        }
-
-        BiFunction<Path, BundleMember.Role, Path> substituteAuxiliaryPath = useBundle() ? bundleSupport::substituteAuxiliaryPath : (a, b) -> a;
+        BiFunction<Path, BundleMember.Role, Path> substituteAuxiliaryPath = useBundle() ? bundleSupport::substituteAuxiliaryPath : (a, _) -> a;
         Function<String, String> imageArgsTransformer = rawArg -> apiOptionHandler.transformBuilderArgument(rawArg, substituteAuxiliaryPath);
         List<String> finalImageArgs = imageArgs.stream().map(imageArgsTransformer).collect(Collectors.toList());
 
@@ -1738,12 +1643,7 @@ public class NativeImage {
              */
             keepAliveFile = Path.of("/proc/" + ProcessHandle.current().pid() + "/comm");
         } else {
-            try {
-                keepAliveFile = Files.createTempFile(".native_image", "alive");
-                keepAliveFile.toFile().deleteOnExit();
-            } catch (IOException e) {
-                throw showError("Temporary keep-alive file could not be created");
-            }
+            keepAliveFile = createFileInTempDir(".native_image.alive");
         }
 
         boolean useContainer = useBundle() && bundleSupport.useContainer;
@@ -1775,7 +1675,7 @@ public class NativeImage {
             }
             int exitStatusCode = bundleSupport.containerSupport.initializeImage();
             switch (ExitStatus.of(exitStatusCode)) {
-                case OK -> {
+                case OK, CONTAINER_REUSE -> {
                 }
                 case BUILDER_ERROR -> {
                     /* Exit, builder has handled error reporting. */
@@ -1827,19 +1727,7 @@ public class NativeImage {
         if (OS.WINDOWS.isCurrent()) {
             WindowsBuildEnvironmentUtil.propagateEnv(environment);
         }
-        environment.put(ModuleSupport.ENV_VAR_USE_MODULE_SYSTEM, Boolean.toString(config.modulePathBuild));
-        if (!config.modulePathBuild) {
-            /**
-             * The old mode of running the image generator on the class path, which was deprecated
-             * in GraalVM 22.2, is no longer allowed. Using the environment variable
-             * `USE_NATIVE_IMAGE_JAVA_PLATFORM_MODULE_SYSTEM=false` that used to enable the
-             * class-path-mode now leads to an early image build error. We really want to report
-             * this as an error, because just ignoring the environment variable would most likely
-             * lead to obscure image build errors later on.
-             */
-            throw showError("Running the image generator on the class path is no longer possible. Setting the environment variable " +
-                            ModuleSupport.ENV_VAR_USE_MODULE_SYSTEM + "=false is no longer supported.");
-        }
+        environment.put(SharedConstants.DRIVER_TEMP_DIR_ENV_VARIABLE, config.driverTempDir.toString());
 
         completeCommandList.addAll(0, environment.entrySet().stream().map(e -> e.getKey() + "=" + e.getValue()).sorted().toList());
         completeCommandList.add(javaExecutable);
@@ -1862,7 +1750,16 @@ public class NativeImage {
 
         Process p = null;
         try {
-            p = pb.inheritIO().start();
+            if (!useBundle()) {
+                pb.inheritIO();
+            }
+            p = pb.start();
+            if (useBundle()) {
+                ProcessOutputTransformer.attach(p.getInputStream(), bundleSupport::cleanupBuilderOutput, System.out);
+                // Checkstyle: allow System.err (stderr support)
+                ProcessOutputTransformer.attach(p.getErrorStream(), bundleSupport::cleanupBuilderOutput, System.err);
+                // Checkstyle: disallow System.err
+            }
             imageBuilderPid = p.pid();
             return p.waitFor();
         } catch (IOException | InterruptedException e) {
@@ -1871,6 +1768,44 @@ public class NativeImage {
             if (p != null) {
                 p.destroy();
             }
+        }
+    }
+
+    private record ProcessOutputTransformer(InputStream in, Function<String, String> mapper, PrintStream out) implements Runnable {
+
+        static void attach(InputStream in, Function<String, String> mapper, PrintStream out) {
+            Thread.ofVirtual().start(new ProcessOutputTransformer(in, mapper, out));
+        }
+
+        @Override
+        public void run() {
+            try (BufferedReader reader = new BufferedReader(new InputStreamReader(in))) {
+                reader.lines().map(mapper).forEach(out::println);
+            } catch (IOException e) {
+                throw showError("Unable to process stdout/stderr of image builder process", e);
+            }
+        }
+    }
+
+    /**
+     * Creates a file with name 'fileName' in the {@link NativeImage#driverTempDir temporary
+     * directory} and returns the path to the newly created file. Note: the file will be deleted if
+     * it already exists.
+     *
+     * @param fileName the name of file to create in the temporary directory.
+     * @return the path to the newly created file.
+     */
+    private Path createFileInTempDir(String fileName) {
+        Objects.requireNonNull(fileName);
+        try {
+            Path path = driverTempDir.resolve(fileName);
+            Files.deleteIfExists(path);
+            Files.createFile(path);
+            return path;
+        } catch (InvalidPathException e) {
+            throw showError("Invalid path for file in temp directory: " + e.getMessage());
+        } catch (IOException e) {
+            throw showError("Unable to create file in temp directory: " + e.getMessage());
         }
     }
 
@@ -1884,8 +1819,8 @@ public class NativeImage {
         }
     }
 
-    private Map<String, Path> getModulesFromPath(Collection<Path> modulePath) {
-        if (!config.modulePathBuild || modulePath.isEmpty()) {
+    private static Map<String, Path> getModulesFromPath(Collection<Path> modulePath) {
+        if (modulePath.isEmpty()) {
             return Map.of();
         }
 
@@ -1905,17 +1840,15 @@ public class NativeImage {
     }
 
     private Set<String> getImplicitlyRequiredSystemModules(Collection<Path> modulePath) {
-        if (!config.modulePathBuild || modulePath.isEmpty()) {
-            return Set.of();
+        ModuleFinder finder = ModuleFinder.ofSystem();
+        if (!modulePath.isEmpty()) {
+            ModuleFinder appModuleFinder = ModuleFinder.of(modulePath.toArray(Path[]::new));
+            finder = ModuleFinder.compose(appModuleFinder, finder);
         }
-
-        ModuleFinder systemModuleFinder = ModuleFinder.ofSystem();
-        ModuleFinder appModuleFinder = ModuleFinder.of(modulePath.toArray(Path[]::new));
-        ModuleFinder finder = ModuleFinder.compose(appModuleFinder, systemModuleFinder);
         Map<String, ModuleReference> modules = finder.findAll().stream()
                         .collect(Collectors.toMap(m -> m.descriptor().name(), m -> m));
 
-        Set<String> applicationModulePathRequiredModules = new HashSet<>();
+        Set<String> applicationModulePathRequiredModules = new HashSet<>(); // noEconomicSet(api)
         Queue<ModuleReference> discoveryQueue = new ArrayDeque<>(modules.values());
 
         while (!discoveryQueue.isEmpty()) {
@@ -1956,19 +1889,9 @@ public class NativeImage {
     }
 
     private static void sanitizeJVMEnvironment(Map<String, String> environment, Map<String, String> imageBuilderEnvironment) {
-        Set<String> requiredKeys = new HashSet<>(List.of("PATH", "PWD", "HOME", "LANG", "LANGUAGE"));
-        Function<String, String> keyMapper;
-        if (OS.WINDOWS.isCurrent()) {
-            requiredKeys.addAll(List.of("TEMP", "INCLUDE", "LIB"));
-            keyMapper = s -> s.toUpperCase(Locale.ROOT);
-        } else {
-            keyMapper = Function.identity();
-        }
         Map<String, String> restrictedEnvironment = new HashMap<>();
         environment.forEach((key, val) -> {
-            String mappedKey = keyMapper.apply(key);
-            // LC_* are locale vars that override LANG for specific categories (or all, with LC_ALL)
-            if (requiredKeys.contains(mappedKey) || mappedKey.startsWith("LC_")) {
+            if (EnvironmentVariable.isKeyRequired(key)) {
                 restrictedEnvironment.put(key, val);
             }
         });
@@ -1977,8 +1900,9 @@ public class NativeImage {
             if (entry.getValue() != null) {
                 restrictedEnvironment.put(entry.getKey(), entry.getValue());
             } else {
+                EnvironmentVariable imageBuilderEnvironmentVariable = EnvironmentVariable.of(entry);
                 environment.forEach((key, val) -> {
-                    if (keyMapper.apply(key).equals(keyMapper.apply(entry.getKey()))) {
+                    if (imageBuilderEnvironmentVariable.keyEquals(key)) {
                         /*
                          * Record key as it was given by -E<key-name> (by using `entry.getKey()`
                          * instead of `key`) to allow creating bundles on Windows that will also
@@ -2007,34 +1931,21 @@ public class NativeImage {
         performBuild(new BuildConfiguration(Arrays.asList(args)), defaultNativeImageProvider);
     }
 
-    public static List<String> translateAPIOptions(List<String> arguments) {
-        var handler = new APIOptionHandler(defaultNativeImageProvider.apply(new BuildConfiguration(arguments)));
-        var argumentQueue = new ArgumentQueue(OptionOrigin.originDriver);
-        handler.nativeImage.config.args.forEach(argumentQueue::add);
-        List<String> translatedOptions = new ArrayList<>();
-        while (!argumentQueue.isEmpty()) {
-            String translatedOption = handler.translateOption(argumentQueue);
-            String originalOption = argumentQueue.poll();
-            translatedOptions.add(translatedOption != null ? translatedOption : originalOption);
-        }
-        return translatedOptions;
-    }
-
     protected static void performBuild(BuildConfiguration config, Function<BuildConfiguration, NativeImage> nativeImageProvider) {
         try {
             build(config, nativeImageProvider);
         } catch (NativeImageError e) {
             String message = e.getMessage();
             if (message != null) {
-                NativeImage.show(System.err::println, "Error: " + message);
+                NativeImage.show(System.out::println, "Error: " + message);
             }
             Throwable cause = e.getCause();
             while (cause != null) {
-                NativeImage.show(System.err::println, "Caused by: " + cause);
+                NativeImage.show(System.out::println, "Caused by: " + cause);
                 cause = cause.getCause();
             }
             if (config.getBuildArgs().contains("--verbose")) {
-                e.printStackTrace();
+                e.printStackTrace(System.out);
             }
             System.exit(e.exitCode);
         }
@@ -2042,48 +1953,103 @@ public class NativeImage {
     }
 
     private static void build(BuildConfiguration config, Function<BuildConfiguration, NativeImage> nativeImageProvider) {
-        NativeImage nativeImage = nativeImageProvider.apply(config);
-        if (config.getBuildArgs().isEmpty()) {
-            nativeImage.showMessage(usageText);
-        } else {
-            try {
-                nativeImage.prepareImageBuildArgs();
-            } catch (NativeImageError e) {
-                if (nativeImage.isVerbose()) {
-                    throw showError("Requirements for building native images are not fulfilled", e);
-                } else {
-                    throw showError("Requirements for building native images are not fulfilled [cause: " + e.getMessage() + "]", null);
+        List<String> buildArgs = config.getBuildArgs();
+        if (buildArgs.isEmpty()) {
+            showMessage(USAGE_TEXT);
+            return;
+        }
+        for (String arg : buildArgs) {
+            boolean exit = true;
+            switch (arg) {
+                case "--help" -> {
+                    showMessage(HELP_TEXT);
+                    showNewline();
+                    nativeImageProvider.apply(config).apiOptionHandler.printOptions(NativeImage::showMessage, false);
+                    showNewline();
                 }
+                case "--help-extra" -> {
+                    showMessage(HELP_EXTRA_TEXT);
+                    nativeImageProvider.apply(config).apiOptionHandler.printOptions(NativeImage::showMessage, true);
+                    showNewline();
+                }
+                case "--version" -> printVersion();
+                default -> exit = false;
             }
-
-            try {
-                int exitStatusCode = nativeImage.completeImageBuild();
-                switch (ExitStatus.of(exitStatusCode)) {
-                    case OK:
-                        break;
-                    case BUILDER_ERROR:
-                        /* Exit, builder has handled error reporting. */
-                        throw showError(null, null, exitStatusCode);
-                    case FALLBACK_IMAGE:
-                        nativeImage.showMessage("Generating fallback image...");
-                        build(new FallbackBuildConfiguration(nativeImage), nativeImageProvider);
-                        LogUtils.warning("Image '" + nativeImage.imageName + "' is a fallback image that requires a JDK for execution (use --" + SubstrateOptions.OptionNameNoFallback +
-                                        " to suppress fallback image generation and to print more detailed information why a fallback image was necessary).");
-                        break;
-                    case OUT_OF_MEMORY, OUT_OF_MEMORY_KILLED:
-                        nativeImage.showOutOfMemoryWarning();
-                        throw showError(null, null, exitStatusCode);
-                    default:
-                        String message = String.format("Image build request for '%s' (pid: %d, path: %s) failed with exit status %d",
-                                        nativeImage.imageName, nativeImage.imageBuilderPid, nativeImage.imagePath, exitStatusCode);
-                        throw showError(message, null, exitStatusCode);
-                }
-            } finally {
-                if (nativeImage.useBundle()) {
-                    nativeImage.bundleSupport.complete();
-                }
+            if (exit) {
+                System.exit(ExitStatus.OK.getValue());
             }
         }
+        NativeImage nativeImage = nativeImageProvider.apply(config);
+        try {
+            nativeImage.prepareImageBuildArgs();
+        } catch (NativeImageError e) {
+            if (nativeImage.isVerbose()) {
+                throw showError("Requirements for building native images are not fulfilled", e);
+            } else {
+                throw showError("Requirements for building native images are not fulfilled [cause: " + e.getMessage() + "]", null);
+            }
+        }
+        try {
+            int exitStatusCode = nativeImage.completeImageBuild();
+            switch (ExitStatus.of(exitStatusCode)) {
+                case OK:
+                    break;
+                case BUILDER_ERROR:
+                    /* Exit, builder has handled error reporting. */
+                    throw showError(null, null, exitStatusCode);
+                case REBUILD_AFTER_ANALYSIS:
+                    build(config, buildConfig -> {
+                        NativeImage rebuildNativeImage = nativeImageProvider.apply(buildConfig);
+                        rebuildNativeImage.addImageBuilderJavaArgs(String.format("-D%s=true", SharedConstants.REBUILD_AFTER_ANALYSIS_MARKER));
+                        return rebuildNativeImage;
+                    });
+                    break;
+                case OUT_OF_MEMORY, OUT_OF_MEMORY_KILLED:
+                    nativeImage.showOutOfMemoryWarning();
+                    throw showError(null, null, exitStatusCode);
+                default:
+                    String message = String.format("Image build request for '%s' (pid: %d, path: %s) failed with exit status %d",
+                                    nativeImage.imageName, nativeImage.imageBuilderPid, nativeImage.imagePath, exitStatusCode);
+                    throw showError(message, null, exitStatusCode);
+            }
+        } finally {
+            if (nativeImage.useBundle()) {
+                nativeImage.bundleSupport.complete();
+            }
+        }
+    }
+
+    /**
+     * Prints version output following
+     * "src/java.base/share/classes/java/lang/VersionProps.java.template#print(boolean)".
+     */
+    public static void printVersion() {
+        /* First line: platform version. */
+        String javaVersion = System.getProperty("java.version");
+        String javaVersionDate = System.getProperty("java.version.date");
+        System.out.printf("native-image %s %s%n", javaVersion, javaVersionDate);
+
+        /* Second line: runtime version (ie, libraries). */
+        String javaRuntimeVersion = System.getProperty("java.runtime.version");
+
+        String jdkDebugLevel = System.getProperty("jdk.debug", "release");
+        if ("release".equals(jdkDebugLevel)) {
+            /* Do not show debug level "release" builds */
+            jdkDebugLevel = "";
+        } else {
+            jdkDebugLevel = jdkDebugLevel + " ";
+        }
+
+        String javaRuntimeName = System.getProperty("java.runtime.name");
+        String vendorVersion = VM.getVendorVersion();
+        vendorVersion = vendorVersion.isEmpty() ? "" : " " + vendorVersion;
+        System.out.printf("%s%s (%sbuild %s)%n", javaRuntimeName, vendorVersion, jdkDebugLevel, javaRuntimeVersion);
+
+        /* Third line: VM information. */
+        String javaVMName = System.getProperty("java.vm.name");
+        String javaVMVersion = System.getProperty("java.vm.version");
+        String javaVMInfo = System.getProperty("java.vm.info");
+        System.out.printf("%s%s (%sbuild %s, %s)%n", javaVMName, vendorVersion, jdkDebugLevel, javaVMVersion, javaVMInfo);
     }
 
     Path canonicalize(Path path) {
@@ -2122,10 +2088,6 @@ public class NativeImage {
 
     public void addLimitedModules(String limitModulesArg) {
         limitModules.addAll(Arrays.asList(SubstrateUtil.split(limitModulesArg, ",")));
-    }
-
-    void addImageBuilderClasspath(Path classpath) {
-        imageBuilderClasspath.add(canonicalize(classpath));
     }
 
     void addImageProvidedJars(Path path) {
@@ -2239,8 +2201,6 @@ public class NativeImage {
     }
 
     void addImageModulePath(Path modulePathEntry, boolean strict, boolean processMetaInf) {
-        enableModulePathBuild();
-
         Path mpEntry;
         try {
             mpEntry = canonicalize(modulePathEntry);
@@ -2369,16 +2329,8 @@ public class NativeImage {
         jarOptionMode = val;
     }
 
-    void setModuleOptionMode(boolean val) {
-        enableModulePathBuild();
-        moduleOptionMode = val;
-    }
-
-    private void enableModulePathBuild() {
-        if (!config.modulePathBuild) {
-            NativeImage.showError("Module options not allowed in this image build. Reason: " + config.imageBuilderModeEnforcer);
-        }
-        config.modulePathBuild = true;
+    void enableModuleOption() {
+        moduleOptionMode = true;
     }
 
     boolean isVerbose() {
@@ -2417,25 +2369,25 @@ public class NativeImage {
         this.printFlagsWithExtraHelpOptionQuery = val;
     }
 
-    void showVerboseMessage(boolean show, String message) {
+    static void showVerboseMessage(boolean show, String message) {
         if (show) {
             show(System.out::println, message);
         }
     }
 
-    void showMessage(String message) {
+    static void showMessage(String message) {
         show(System.out::println, message);
     }
 
-    void showMessage(String format, Object... args) {
+    static void showMessage(String format, Object... args) {
         showMessage(String.format(format, args));
     }
 
-    void showNewline() {
+    static void showNewline() {
         System.out.println();
     }
 
-    void showMessagePart(String message) {
+    static void showMessagePart(String message) {
         show(s -> {
             System.out.print(s);
             System.out.flush();
@@ -2444,7 +2396,7 @@ public class NativeImage {
 
     void showOutOfMemoryWarning() {
         String xmxFlag = "-Xmx";
-        String lastMaxHeapValue = imageBuilderArgs.stream().filter(arg -> arg.startsWith(xmxFlag)).reduce((first, second) -> second).orElse(null);
+        String lastMaxHeapValue = imageBuilderArgs.stream().filter(arg -> arg.startsWith(xmxFlag)).reduce((_, second) -> second).orElse(null);
         String maxHeapText = lastMaxHeapValue == null ? "" : " (The maximum heap size of the process was set with '" + lastMaxHeapValue + "'.)";
         String additionalAction = lastMaxHeapValue == null ? "" : " or increase the maximum heap size using the '" + xmxFlag + "' option";
         showMessage("The Native Image build process ran out of memory.%s%nPlease make sure your build system has more memory available%s.", maxHeapText, additionalAction);
